// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parsePages() genre: normal 最初の3件 1`] = `
{
  "artist": "BEN WATT",
  "cheapestItemPrice": "2,250円(税込)",
  "cheapestItemStatus": "B",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": undefined,
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": false,
  "itemId": "1007488350",
  "itemPageUrl": "https://base-url.exmaple/used/ct/indiealt/udetail/1007488350",
  "labelName": "CHERRY RED",
  "media": "12"(レコード)",
  "productTitle": "SUMMER INTO WINTER",
}
`;

exports[`parsePages() genre: normal 最初の3件 2`] = `
{
  "artist": "2ND GRADE",
  "cheapestItemPrice": "2,035円(税込)",
  "cheapestItemStatus": "S",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "50",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008552801",
  "itemPageUrl": "https://base-url.exmaple/used/ct/indiealt/udetail/1008552801",
  "labelName": "DOUBLE DOUBLE WHAMMY",
  "media": "LP(レコード)",
  "productTitle": "EASY LISTENING (VINYL)",
}
`;

exports[`parsePages() genre: normal 最初の3件 3`] = `
{
  "artist": "ALEX G アレックス・G",
  "cheapestItemPrice": "2,695円(税込)",
  "cheapestItemStatus": "B",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "30",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008448920",
  "itemPageUrl": "https://base-url.exmaple/used/ct/indiealt/udetail/1008448920",
  "labelName": "LUCKY NUMBER",
  "media": "LP(レコード)",
  "productTitle": "RULES (LP+7")",
}
`;

exports[`parsePages() genre: discounted 最初の3件 1`] = `
{
  "artist": "A'S (INDIE)",
  "cheapestItemPrice": "1,709円(税込)",
  "cheapestItemStatus": "B",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "5",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008509505",
  "itemPageUrl": "https://base-url.exmaple/used/ct/indiealt/udetail/1008509505",
  "labelName": "PSYCHIC HOTLINE",
  "media": "LP(レコード)",
  "productTitle": "FRUIT (BLACK VINYL)",
}
`;

exports[`parsePages() genre: discounted 最初の3件 2`] = `
{
  "artist": "ALEX CALDER",
  "cheapestItemPrice": "1,045円(税込)",
  "cheapestItemStatus": "B",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "5",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "AWS150123-AC1",
  "itemPageUrl": "https://base-url.exmaple/used/ct/indiealt/udetail/AWS150123-AC1",
  "labelName": "CAPTURED TRACKS",
  "media": "LP(レコード)",
  "productTitle": "STRANGE DREAMS (LP)",
}
`;

exports[`parsePages() genre: discounted 最初の3件 3`] = `
{
  "artist": "ALEX G アレックス・G",
  "cheapestItemPrice": "2,232円(税込)",
  "cheapestItemStatus": "S",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "5",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008448920",
  "itemPageUrl": "https://base-url.exmaple/used/ct/indiealt/udetail/1008448920",
  "labelName": "LUCKY NUMBER",
  "media": "LP(レコード)",
  "productTitle": "RULES (LP+7")",
}
`;


exports[`parsePages() jrock 最初の3件 1`] = `
{
  "artist": "BLANKEY JET CITY ブランキー・ジェット・シティ",
  "cheapestItemPrice": "5,300円(税込)",
  "cheapestItemStatus": "A",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": undefined,
  "genre": "日本のロック",
  "isDiscountedPrice": false,
  "itemId": "1008930066",
  "itemPageUrl": "https://base-url.exmaple/jp/ct/detail/1008930066",
  "labelName": "ユニバーサルミュージック",
  "media": "LP(レコード)",
  "productTitle": "THE SIX",
}
`;

exports[`parsePages() jrock 最初の3件 2`] = `
{
  "artist": "TAKESHI INOMATA 猪俣猛",
  "cheapestItemPrice": "2,650円(税込)",
  "cheapestItemStatus": "A",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "30",
  "genre": "JAZZ",
  "isDiscountedPrice": true,
  "itemId": "1008861334",
  "itemPageUrl": "https://base-url.exmaple/jp/ct/detail/1008861334",
  "labelName": "ユニバーサルミュージック",
  "media": "LP(レコード)",
  "productTitle": "New Rock In Europe(LP)",
}
`;

exports[`parsePages() jrock 最初の3件 3`] = `
{
  "artist": "帯化",
  "cheapestItemPrice": "2,000円(税込)",
  "cheapestItemStatus": "OUTLET",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": undefined,
  "genre": "日本のロック",
  "isDiscountedPrice": true,
  "itemId": "1008900421",
  "itemPageUrl": "https://base-url.exmaple/jp/ct/detail/1008900421",
  "labelName": "造園計画",
  "media": "LP(レコード)",
  "productTitle": "御池塘自治 (LP)",
}
`;

exports[`parsePages() all: discounted 最初の3件 1`] = `
{
  "artist": "DUNGEN ドゥンエン",
  "cheapestItemPrice": "1,980円(税込)",
  "cheapestItemStatus": "OUTLET",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "60",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008525007",
  "itemPageUrl": "https://base-url.exmaple/indiealt/ct/detail/1008525007",
  "labelName": "MEXICAN SUMMER",
  "media": "LP(レコード)",
  "productTitle": "EN AR FOR MYCKET OCH TUSEN ALDRIG NOG(COLOR VINYL)",
}
`;

exports[`parsePages() all: discounted 最初の3件 2`] = `
{
  "artist": "KING KRULE キング・クルール",
  "cheapestItemPrice": "1,672円(税込)",
  "cheapestItemStatus": "OUTLET",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "60",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008365027",
  "itemPageUrl": "https://base-url.exmaple/indiealt/ct/detail/1008365027",
  "labelName": "XL RECORDINGS",
  "media": "LP(レコード)",
  "productTitle": "YOU HEAT ME UP, YOU COOL ME DOWN(LP)",
}
`;

exports[`parsePages() all: discounted 最初の3件 3`] = `
{
  "artist": "CHIME SCHOOL チャイム・スクール",
  "cheapestItemPrice": "1,496円(税込)",
  "cheapestItemStatus": "OUTLET",
  "crawledAt": 2112-07-02T15:00:00.000Z,
  "discountRatePercentage": "20",
  "genre": "ROCK / POPS / INDIE",
  "isDiscountedPrice": true,
  "itemId": "1008523216",
  "itemPageUrl": "https://base-url.exmaple/indiealt/ct/detail/1008523216",
  "labelName": "SLUMBERLAND",
  "media": "CASSETTE TAPE",
  "productTitle": "CHIME SCHOOL (CASSETTE TAPE)",
}
`;
